spacing fix

--- a/assets/design-site/files/scss/includes/ui/_dss_checkboxes.scss
+++ b/assets/design-site/files/scss/includes/ui/_dss_checkboxes.scss
@@ -52,6 +52,8 @@
     grid-column: 3;
     grid-row: 3;
     position: relative;
+    justify-self: left;
+    margin-left: 0.5rem;
   }
 } 
 
@@ -180,12 +182,13 @@
     }
 }
 
-.checkbox-radio-mobile-container, .example-container  {
+.checkbox-radio-mobile-container  {
   label.focus:focus {
     box-shadow: 0px 0px 4px 0 #000;
   }
   @media only screen and (max-width: 600px) {
-    margin-left: 3.5rem;
+    width: 80%;
+    margin-left: 4rem;
   }
 }
 .card-highlight {
